--- a/package.json
+++ b/package.json
@@ -10,20 +10,33 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/stack": "^7.4.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "~53.0.16",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~13.3.2",
+    "expo-linear-gradient": "^14.1.5",
+    "expo-sqlite": "~15.2.13",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-feather": "^1.1.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.11.1",
     "react-native-web": "^0.20.0",
-    "expo-sqlite": "~15.2.13"
+    "tailwind-merge": "^3.3.1",
+    "expo-updates": "~0.28.16"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "babel-plugin-module-resolver": "^5.0.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.8.3"
