Changes To Cash Register

--- a/package.json
+++ b/package.json
@@ -10,28 +10,29 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "~53.0.16",
-    "expo-app-loading": "^2.1.1",
     "expo-font": "~13.3.2",
     "expo-linear-gradient": "^14.1.5",
+    "expo-splash-screen": "^0.30.10",
     "expo-sqlite": "~15.2.13",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.16",
+    "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-feather": "^1.1.2",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.11.1",
     "react-native-web": "^0.20.0",
-    "tailwind-merge": "^3.3.1",
-    "expo-updates": "~0.28.16"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
